Should work with BlobLib 1.690.1cs

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>us.mytheria</groupId>
             <artifactId>bloblib</artifactId>
-            <version>1.629s</version>
+            <version>1.690.1cs</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
