--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>us.mytheria</groupId>
-    <artifactId>BlobBuild</artifactId>
+    <groupId>io.github.anjoismysign</groupId>
+    <artifactId>blobbuild</artifactId>
     <version>1.1.6</version>
     <packaging>jar</packaging>
 
@@ -13,12 +13,12 @@
 
     <description>An efficient build protection plugin</description>
     <properties>
-        <testServer>/Users/lbenav8095/Documents/Dev/Java/anjoismysign/1.19 Test Server</testServer>
-        <java.version>16</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
+        <finalName>${project.name}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -41,8 +41,6 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <outputFile>${testServer}/plugins/${project.name}-${project.version}.jar
-                            </outputFile>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
@@ -86,9 +84,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>us.mytheria</groupId>
+            <groupId>io.github.anjoismysign</groupId>
             <artifactId>bloblib</artifactId>
-            <version>1.697.43</version>
+            <version>1.698.31</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
