--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: BlobBuild
 version: ${project.version}
-main: us.mytheria.blobbuild.BlobBuild
+main: io.github.anjoismysign.blobbuild.BlobBuild
 api-version: 1.17
 depend: [ BlobLib ]
 authors: [ anjoismysign ]
